fixed some alignment problems

--- a/assets/scss/components/layout/_fret.scss
+++ b/assets/scss/components/layout/_fret.scss
@@ -33,6 +33,7 @@ $fret-thickness: 0.4rem;
       border: 0;
       border-bottom: 1rem solid rgb(155, 155, 155);
       display: grid;
+      height: 5rem;
       order: 2;
     }
   }
@@ -47,7 +48,7 @@ $fret-thickness: 0.4rem;
     z-index: 0;
 
     @include media-xsmall {
-      width: 80%;
+      width: 100%;
     }
 
     &--circle {
@@ -56,6 +57,10 @@ $fret-thickness: 0.4rem;
       height: 2.3rem;
       background: $color-fret-circle;
       border-radius: 50%;
+
+      @include media-xsmall {
+        margin-left: 25%;
+      }
     }
   }
 
@@ -67,7 +72,7 @@ $fret-thickness: 0.4rem;
     color: $color-light-secondary;
     margin: 1rem 0rem;
     z-index: 2;
-    width: 25%;
+    width: 1.5rem;
 
     @include media-xsmall {
       margin: 1rem 1rem;
