--- a/assets/scss/components/layout/_fretboard-view.scss
+++ b/assets/scss/components/layout/_fretboard-view.scss
@@ -22,13 +22,16 @@
 
     h1 {
       font-size: 2.5rem;
+      text-align: center;
     }
 
     @include media-xsmall {
       align-items: center;
       flex-direction: column;
+      justify-content: center;
       grid-column: 3;
       grid-row: 2;
+      padding: 3rem;
     }
   }
 }
