--- a/assets/scss/components/layout/_string.scss
+++ b/assets/scss/components/layout/_string.scss
@@ -10,7 +10,7 @@
 
   @include media-xsmall {
     flex-direction: row;
-    padding: 0rem 0.9rem;
+    padding: 0rem 0.5rem;
   }
 
   &:hover {
@@ -29,11 +29,11 @@
     z-index: 0;
 
     @include media-xsmall {
-      //border: none;
+      border: none;
       border-left: 0.1rem solid #ffffff;
-      height: 100%;
-      //height: 7px;
-      margin: 1rem -2rem;
+      height: 110%;
+      margin: 0rem 0rem;
+      width: 0;
     }
   }
 
@@ -69,6 +69,10 @@
     height: 3rem;
     border-radius: 100%;
     text-align: center;
+
+    @include media-xsmall {
+      padding: 0;
+    }
 
     &--hidden {
       position: absolute;
